test/spec_vectors/return_call_indirect/fail/module_29.wat
(module (table funcref (elem 0 0)))